TestSuite/Verification/Error/Serial/Syntax/Expression/out/BooleanExpressionTest.cxx
/*********************************************************************/
/*        This is a generated C++ source file.                       */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/

#include <vector>
#include <cstdint>
#include <string>
#include <limits>
#include <iostream>
#include "includes/Patternlib.hxx"
#include "includes/PThreadsLib.hxx"
#include "includes/BooleanExpressionTest.hxx"
#include "includes/cuda_lib_BooleanExpressionTest.hxx"
#include "mpi.h"
#include "includes/cuda_pool_lib.hxx"
#include "math.h"







/*********************************************************************/
/*        Global Variables                                           */
/*        Generated by PatternDSL .                                  */
/*********************************************************************/



/*********************************************************************/
/*        Function Declarations                                      */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/



int main(int argc, char** argv) {

	bool T_GlVl5HHsZe;
	int NUM_CORES;
	int NUM_GPUS;

	int rank, nprocs;
	MPI_Status Stat;
	MPI_Init(&argc, &argv);
	MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
	if (rank == 0 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	} else 	if (rank == 1 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	}
	std::vector<Thread> pool(NUM_CORES);
	setPool(&pool);
	std::vector<Thread> gpu_pool(NUM_GPUS);
	setGPUPool(&gpu_pool);
	startExecution();
	startGPUExecution();
	if (rank == 0) {
		T_GlVl5HHsZe = true;
		T_GlVl5HHsZe = false;
		T_GlVl5HHsZe = 4 > 2;
		T_GlVl5HHsZe = 4 <= 2;
		T_GlVl5HHsZe = 4 == 2;
		T_GlVl5HHsZe = true && false;
		T_GlVl5HHsZe = true && false;
		T_GlVl5HHsZe = true || false;
		T_GlVl5HHsZe = true || false;
		T_GlVl5HHsZe = ~true;
		T_GlVl5HHsZe = ~true;
	}
	finishExecution();
	finishGPUExecution();
	MPI_Finalize();
	return 0;


}

